--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "backtesting-py"
-version = "0.1.0"
+version = "0.3.3.1"
 description = "super charged backtesting.py derivation"
 authors = ["kernc, qiuxiao"]
 readme = "README.md"
@@ -25,7 +25,7 @@ packages = [{ include = "backtesting" }]
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.22.0"
-pandas = "^1.0.0"
+pandas = ">=1.0.0, <3.0.0"
 bokeh = "^2.4.0"
 scikit-optimize = {version = "^0.9.0", optional = true}
 pdoc3 = {version = "^0.9.0", optional = true}
